@@ -322,7 +322,7 @@ xs   <- xcmsSet(c(file), method="centWave", ppm=30, peakwidth=c(5,10))
 an   <- xsAnnotate(xs)
 an   <- groupFWHM(an)
 an   <- findAdducts(an, polarity="positive")
-plotEICs(an, xr, pspecIdx=c(1))
+plotEICs(an, xr, pspecIdx=c(1), maxlabel=5)
 @
 
 \begin{figure}
